# Inventory-Management-System

backend/: .env  pyproject.toml
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py
backend/app/routers/: auth_routes.py  inventory_routes.py
frontend/my-appp/: package-lock.json  package.json  tailwind.config.ts
frontend/my-appp/src/app/: globals.css  layout.tsx  page.tsx
frontend/my-appp/src/app/dashboard/: page.tsx
frontend/my-appp/src/app/login/: page.tsx
frontend/my-appp/src/app/register/: page.tsx
frontend/my-appp/src/components/: Button.tsx  Card.tsx  Footer.tsx  Header.tsx  InventoryItem.tsx  InventoryList.tsx  Navbar.tsx  Overview.tsx  Sidebar.tsx
frontend/my-appp/src/services/: apiServices.ts
