[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["afzalfaizi <afzaalm993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlmodel = "^0.0.22"
uvicorn = "^0.32.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
psycopg2 = "^2.9.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
